--- a/app/src/app/roles/facility/completedreferrals/completedreferrals.page.html
+++ b/app/src/app/roles/facility/completedreferrals/completedreferrals.page.html
@@ -8,28 +8,32 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <ion-searchbar placeholder="Patient name" [(ngModel)]="data"></ion-searchbar>
-
-  <div class="card">
-    <h4>Completed Referrals</h4>
-    <div *ngIf="!ready">Loading...</div>
-    
-    
-    <div *ngIf="ready">
-      <div *ngIf="!pendingreports">No Referrals To Complete</div>
-      <div *ngIf="pendingreports">
-        <span *ngFor="let item of pendingreports | searchfilter:data:['referral_patient_name']; let i = index">
-          <ion-row>
-            <ion-col routerLink="/facility/reportsingle/{{item.report_id}}" routerLinkActive="router-link-active" >
-              <span>{{item.referral_patient_name}}</span>
-              <span>{{item.report_procedure}}</span>
-              <ion-button size="small">Prepare Report</ion-button>
-            </ion-col>
-          </ion-row>
-          <ion-item-divider></ion-item-divider>
-        </span>
+  <div *ngIf="connected">
+    <ion-searchbar placeholder="Patient name" [(ngModel)]="data"></ion-searchbar>
+  
+    <div class="card">
+      <h4>Completed Referrals</h4>
+      <div *ngIf="!ready">Loading...</div>
+      
+      
+      <div *ngIf="ready">
+        <div *ngIf="!pendingreports">No Referrals To Complete</div>
+        <div *ngIf="pendingreports">
+          <span *ngFor="let item of pendingreports | searchfilter:data:['referral_patient_name']; let i = index">
+            <ion-row>
+              <ion-col routerLink="/facility/reportsingle/{{item.report_id}}" routerLinkActive="router-link-active" >
+                <span>{{item.referral_patient_name}}</span>
+                <span>{{item.report_procedure}}</span>
+                <ion-button size="small">Prepare Report</ion-button>
+              </ion-col>
+            </ion-row>
+            <ion-item-divider></ion-item-divider>
+          </span>
+        </div>
       </div>
+  
     </div>
-
+    
   </div>
+  <app-notconnected *ngIf="!connected"></app-notconnected>
 </ion-content>
