--- a/app/src/app/roles/guest/slides/slides.page.html
+++ b/app/src/app/roles/guest/slides/slides.page.html
@@ -2,32 +2,32 @@
   <swiper #swiper>
     <ng-template swiperSlide>
       <img src="/assets/images/doctors.png">
-      <h1>Welcome to Referral Med</h1>
-      <p>Your comprehensive referral Application</p>
+      <h1>Welcome to Reef App</h1>
+      <p>A platform to ease patient referral process for all</p>
       <div class="button"><ion-button (click)="next()" fill="outline">Next</ion-button></div>
     </ng-template>
 
 
     <ng-template swiperSlide>
       <img src="/assets/images/easy.png">
-      <h1>Book Patients</h1>
-      <p>Send patients our way in just a few steps</p>
+      <h1>No hustle for patients</h1>
+      <p>We will pick up and send patients to the right centers for their procedures</p>
       <div class="button"><ion-button (click)="next()" fill="outline">Next</ion-button></div>
     </ng-template>
 
 
     <ng-template swiperSlide>
       <img src="/assets/images/labs.png">
-      <h1>Book Patients</h1>
-      <p>Send patients our way in just a few steps</p>
+      <h1>To notch centers</h1>
+      <p>We patner with the best facilities in town to ensure patients recieve the best care</p>
       <div class="button"><ion-button (click)="next()" fill="outline">Next</ion-button></div>
     </ng-template>
 
 
     <ng-template swiperSlide>
       <img src="/assets/images/getreports.png">
-      <h1>Book Patients</h1>
-      <p>Send patients our way in just a few steps</p>
+      <h1>Report Returns</h1>
+      <p>Get reports sent back to you when done</p>
       <div class="button"><ion-button (click)="next()" fill="outline">Next</ion-button></div>
     </ng-template>
 
