--- a/app/src/app/roles/guest/slides/slides.page.scss
+++ b/app/src/app/roles/guest/slides/slides.page.scss
@@ -12,7 +12,7 @@ ion-content{
     p{
         text-align: center;
         margin: 0;
-        padding: 0;
+        padding: 0 2em;
     }
     .button{
         text-align: center;
