--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -272,9 +272,9 @@
             <div class="filtering text-center mb-30 col-sm-12">
                 <div class="filter">
                     <span data-filter='*' class="active">All</span>
-                    <span data-filter='.brand'>Users</span>
-                    <span data-filter='.web'>Facilities</span>
-                    <span data-filter='.graphic'>Admins</span>
+                    <span data-filter='.brand'>Authentication</span>
+                    <span data-filter='.web'>Referring</span>
+                    <span data-filter='.graphic'>Finances</span>
                 </div>
             </div>
 
@@ -289,8 +289,8 @@
                         <img src="../../../../assets/img/portfolio/1.jpg" alt="image">
                         <div class="item-img-overlay">
                             <div class="overlay-info full-width">
-                                <p>Logo | Branding</p>
-                                <h6>Creative Web Design</h6>
+                                <p>App</p>
+                                <h6>Splash screen</h6>
                                 <a href="../../../../assets/img/portfolio/1.jpg" class="popimg">
                                     <span class="icon"><i class="fas fa-long-arrow-alt-right"></i></span>
                                 </a>
@@ -305,8 +305,8 @@
                         <img src="../../../../assets/img/portfolio/2.jpg" alt="image">
                         <div class="item-img-overlay">
                             <div class="overlay-info full-width">
-                                <p>Logo | Branding</p>
-                                <h6>Creative Web Design</h6>
+                                <p>App</p>
+                                <h6>Login</h6>
                                 <a href="../../../../assets/img/portfolio/2.jpg" class="popimg">
                                     <span class="icon"><i class="fas fa-long-arrow-alt-right"></i></span>
                                 </a>
@@ -321,8 +321,8 @@
                         <img src="../../../../assets/img/portfolio/3.jpg" alt="image">
                         <div class="item-img-overlay">
                             <div class="overlay-info full-width">
-                                <p>Logo | Branding</p>
-                                <h6>Creative Web Design</h6>
+                                <p>App</p>
+                                <h6>Sign Up</h6>
                                 <a href="../../../../assets/img/portfolio/3.jpg" class="popimg">
                                     <span class="icon"><i class="fas fa-long-arrow-alt-right"></i></span>
                                 </a>
@@ -476,8 +476,8 @@
         <div class="row">
 
             <div class="section-head offset-md-2 col-md-8 offset-lg-3 col-lg-6">
-                <h4><span>Talent</span> Team</h4>
-                <p>We are a passionate digital design agency that specializes in beautiful and easy-to-use digital design & web development services.</p>
+                <h4><span>The</span> Team</h4>
+                <!-- <p>We are a passionate digital design agency that specializes in beautiful and easy-to-use digital design & web development services.</p> -->
             </div>
             
             <div class="row">
