--- a/frontend/src/app/homepage/homepage.component.html
+++ b/frontend/src/app/homepage/homepage.component.html
@@ -90,7 +90,7 @@
                             <div class="left col-lg-6">
                                 <div class="about box-white">
                                     <h5 class="title">About Us</h5>
-                                    <h6 class="sub-title">We Are A Creative Agency</h6>
+                                    <!-- <h6 class="sub-title">We Are A Creative Agency</h6> -->
                                     <p>Reef Med is a full service which means we've got you convered from start to finish on the referral proccess</p>
 
                                     <!-- Skills -->
@@ -129,7 +129,7 @@
                             <div class="left col-lg-6">
                                 <div class="mission box-white">
                                     <h5 class="title">Our Mission</h5>
-                                    <h6 class="sub-title">We Are A Creative Agency</h6>
+                                    <!-- <h6 class="sub-title">We Are A Creative Agency</h6> -->
                                     <p class="mb-10">We want to simplify the process of compensating healthcare professionals and non-healthcare professionals who recommend patients to convenient facilities.</p>
                                     <p>If necessary, we would call, pick up, and take patients to the best facility available. Additionally, we want to boost the number of visitors to the facility by driving more traffic your way in exchange for a flexible commission based on the cost. Paying the referrer a share, which will encourage them to continue submitting cases our way.</p>
                                 </div>
@@ -146,7 +146,7 @@
                             <div class="left col-lg-6">
                                 <div class="why-us box-white">
                                     <h5 class="title">Why Choose Us?</h5>
-                                    <h6 class="sub-title">We Are A Creative Agency</h6>
+                                    <!-- <h6 class="sub-title">We Are A Creative Agency</h6> -->
                                     <p>We offer the best referal payments as well as prompt payment services across the country, a possiblity of the patient sending reports to the same doctor, very simple to use mobile app and many more</p>
                                     <ul class="feat mt-30 row">
                                         <li class="col-sm-4">
@@ -337,8 +337,8 @@
                         <img src="../../../../assets/img/portfolio/4.jpg" alt="image">
                         <div class="item-img-overlay">
                             <div class="overlay-info full-width">
-                                <p>Logo | Branding</p>
-                                <h6>Creative Web Design</h6>
+                                <p>App</p>
+                                <h6>Send Referral</h6>
                                 <a href="../../../../assets/img/portfolio/4.jpg" class="popimg">
                                     <span class="icon"><i class="fas fa-long-arrow-alt-right"></i></span>
                                 </a>
@@ -353,8 +353,8 @@
                         <img src="../../../../assets/img/portfolio/5.jpg" alt="image">
                         <div class="item-img-overlay">
                             <div class="overlay-info full-width">
-                                <p>Logo | Branding</p>
-                                <h6>Creative Web Design</h6>
+                                <p>App</p>
+                                <h6>Referral Form</h6>
                                 <a href="../../../../assets/img/portfolio/5.jpg" class="popimg">
                                     <span class="icon"><i class="fas fa-long-arrow-alt-right"></i></span>
                                 </a>
@@ -369,8 +369,8 @@
                         <img src="../../../../assets/img/portfolio/6.jpg" alt="image">
                         <div class="item-img-overlay">
                             <div class="overlay-info full-width">
-                                <p>Logo | Branding</p>
-                                <h6>Creative Web Design</h6>
+                                <p>App</p>
+                                <h6>Transactions Form</h6>
                                 <a href="../../../../assets/img/portfolio/6.jpg" class="popimg">
                                     <span class="icon"><i class="fas fa-long-arrow-alt-right"></i></span>
                                 </a>
@@ -385,8 +385,8 @@
                         <img src="../../../../assets/img/portfolio/7.jpg" alt="image">
                         <div class="item-img-overlay">
                             <div class="overlay-info full-width">
-                                <p>Logo | Branding</p>
-                                <h6>Creative Web Design</h6>
+                                <p>App</p>
+                                <h6>User Homepage</h6>
                                 <a href="../../../../assets/img/portfolio/7.jpg" class="popimg">
                                     <span class="icon"><i class="fas fa-long-arrow-alt-right"></i></span>
                                 </a>
@@ -401,8 +401,8 @@
                         <img src="../../../../assets/img/portfolio/8.jpg" alt="image">
                         <div class="item-img-overlay">
                             <div class="overlay-info full-width">
-                                <p>Logo | Branding</p>
-                                <h6>Creative Web Design</h6>
+                                <p>App</p>
+                                <h6>History</h6>
                                 <a href="../../../../assets/img/portfolio/8.jpg" class="popimg">
                                     <span class="icon"><i class="fas fa-long-arrow-alt-right"></i></span>
                                 </a>
@@ -485,7 +485,7 @@
               <div class="col-12 col-md-6 col-lg-3">
                 <div class="item">
                   <div class="team-img">
-                    <img src="../../../../assets/img/team/1.jpg" alt="">
+                    <img src="../../../../assets/img/team/kojo.jpg" alt="">
                     <div class="social">
                       <a href="#0" class="icon">
                         <i class="fab fa-facebook-f"></i>
@@ -551,7 +551,7 @@
                 </div>
               </div>
 
-              <div class="col-12 col-md-6 col-lg-3">
+              <!-- <div class="col-12 col-md-6 col-lg-3">
                 <div class="item">
                   <div class="team-img">
                     <img src="../../../../assets/img/team/4.jpg" alt="">
@@ -572,7 +572,7 @@
                     <span>Consultant</span>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
             </div>
 
